mod:fotos-identidade

--- a/index.html
+++ b/index.html
@@ -657,42 +657,52 @@
                         <ul class="funcionarios">
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/ana clara.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">ANA CLARA</span>
+                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                </a>
+                            </li>
+                            <li class="tree-node">
+                                <a href="#" class="node-link">
+                                    <img src="imagens/kaique.jpg" alt="Employee Image" class="node-image">
+                                    <span class="node-label">KAIQUE</span>
                                     <p class="node-label-cargo">ESTAGIÁRIO</p>
                                 </a>
                             </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">KAIQUE</span>
-                                    <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                </a>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/jhonatan.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">JHONATAN</span>
                                     <p class="node-label-cargo">ESTAGIÁRIO</p>
                                 </a>
+                            </li> 
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/leonardo.jpg" alt="Employee Image" class="node-image">
+                                    <span class="node-label">Leonardo</span>
+                                    <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                </a>
+                            </li>    
+                            <li class="tree-node">
+                                <a href="#" class="node-link">
+                                    <img src="imagens/gabriela tamanini.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">GABRIELA</span>
-                                    <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
                                 </a>
+                            </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/rafaela.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">RAFAELA</span>
-                                    <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
                                 </a>
+                            </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/kaiki.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">KAIKI</span>
                                     <p class="node-label-cargo">ESTAGIÁRIO</p>
                                 </a>
-
                             </li>
                         </ul>
                     </li>
@@ -714,7 +724,6 @@
                     </li>
                 </ul>
             </li> <!--JUNTA-->
-        <ul class="tree-children"></ul>
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
                     <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -731,31 +740,24 @@
                         <ul class="funcionarios">
                             <li class="tree-node">
                                 <a href="#" class="node-link funcionario">
-                                    <img src="imagens/carlos borchardt.jpg" alt="Coordenador Image" class="node-image">
-                                    <span class="node-label">FRANCISCA</span>
+                                    <img src="imagens/francisca.jpg" alt="Employee Image" class="node-image">
+                                    <span class="node-label">francisca</span>
                                     <p class="node-label-cargo">SERVIDORA</p>
                                 </a>
-                            <ul class="tree-children"
-                                <ul class="funcionarios">
+                                <ul class="sub-funcionarios">
                                     <li class="tree-node">
-                                        <a href="#" class="node-link funcionario">
-                                            <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
-                                            <span class="node-label">?</span>
-                                            <p class="node-label-cargo">ESTÁGIARIO</p>
-                                        </a>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link funcionario">
-                                            <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
-                                            <span class="node-label">?</span>
-                                            <p class="node-label-cargo">ESTÁGIARIO</p>
+                                        <a href="#" class="node-link">
+                                            <img src="imagens/leonardo bertolo.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Leonardo</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIO</p>
                                         </a>
                                     </li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
-                </li> <!--DEMUTRAN-->
-            </ul>
+                </ul>
+            </li>
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
                     <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -779,59 +781,59 @@
                                 <ul class="sub-funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/alana.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Alana</span>
                                             <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/thais.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Thais</span>
                                             <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/caroline.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Caroline</span>
                                             <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/fernando.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Fernando</span>
                                             <p class="node-label-cargo">ESTAGIÁRIO</p>
                                         </a>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/cristopher.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Cristopher</span>
                                             <p class="node-label-cargo">ESTAGIÁRIO</p>
                                         </a>
                                     </li>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/gabriela.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Gabriela</span>
                                             <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     </li>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/dandara.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Dandara</span>
                                             <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     </li>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/jennifer.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Jennifer</span>
                                             <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     </li>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/3.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/francine.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Francine</span>
                                             <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
@@ -841,8 +843,7 @@
                         </ul>
                     </li>
                 </ul>
-            </li> <!--IDENTIDADE-->
-            </ul>
+             </li> <!--IDENTIDADE-->   
         </div>
     </div>
     <script src="js/script.js"></script>
