upd:cadastro economico

--- a/index.html
+++ b/index.html
@@ -40,61 +40,60 @@
                         <p class="node-label-cargo">DIRETOR</p>
                     </a>
                     <ul class="tree-root">
-                            <li class="tree-node-gestao-setor">
-                                <a href="#" class="node-link setor" id="gestao-link">
-                                    <img src="imagens/simplifica-removebg-preview.png" alt="Setor Image" class="node-image">
-                                    <span class="node-label">Gestão</span>
-                                </a>
-                                <ul class="coordenadores">
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link coordenador">
-                                            <img src="imagens/deisy.jpg" alt="Coordenador Image" class="node-image">
-                                            <span class="node-label">Deisy</span>
-                                            <p class="node-label-cargo">SERVIDORA</p>
-                                        </a>
-                                    </li>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link coordenador">
-                                            <img src="imagens/pamela longo.jpg" alt="Coordenador Image"
-                                                class="node-image">
-                                            <span class="node-label">Pamela</span>
-                                            <p class="node-label-cargo">SERVIDORA</p>
-                                        </a>
-                                    </li>
-                                </ul>
-                                <ul class="gestao-estagiarios" id="gestao-estagiarios">
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link funcionario">
-                                            <img src="imagens/thaigor.jpg" alt="Funcionario 1 Image" class="node-image">
-                                            <span class="node-label">thaigor</span>
-                                            <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                            <p></p>
-                                        </a>
-                                    </li>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link funcionario">
-                                            <img src="imagens/viviane.jpg" alt="Funcionario 2 Image" class="node-image">
-                                            <span class="node-label">Viviane</span>
-                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                        </a>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link funcionario">
-                                            <img src="imagens/maria odorizzi.jpg" alt="Funcionario 1 Image"
-                                                class="node-image">
-                                            <span class="node-label">Maria</span>
-                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                        </a>
-                                    </li>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link funcionario">
-                                            <img src="imagens/kriscia.jpg" alt="Funcionario 1 Image" class="node-image">
-                                            <span class="node-label">Kriscia</span>
-                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
+                        <li class="tree-node-gestao-setor">
+                            <a href="#" class="node-link setor" id="gestao-link">
+                                <img src="imagens/simplifica-removebg-preview.png" alt="Setor Image" class="node-image">
+                                <span class="node-label">Gestão</span>
+                            </a>
+                            <ul class="coordenadores">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link coordenador">
+                                        <img src="imagens/deisy.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Deisy</span>
+                                        <p class="node-label-cargo">SERVIDORA</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link coordenador">
+                                        <img src="imagens/pamela longo.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Pamela</span>
+                                        <p class="node-label-cargo">SERVIDORA</p>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="gestao-estagiarios" id="gestao-estagiarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link funcionario">
+                                        <img src="imagens/thaigor.jpg" alt="Funcionario 1 Image" class="node-image">
+                                        <span class="node-label">thaigor</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p></p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link funcionario">
+                                        <img src="imagens/viviane.jpg" alt="Funcionario 2 Image" class="node-image">
+                                        <span class="node-label">Viviane</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link funcionario">
+                                        <img src="imagens/maria odorizzi.jpg" alt="Funcionario 1 Image"
+                                            class="node-image">
+                                        <span class="node-label">Maria</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link funcionario">
+                                        <img src="imagens/kriscia.jpg" alt="Funcionario 1 Image" class="node-image">
+                                        <span class="node-label">Kriscia</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                 </li>
             </ul>
             <ul class="tree-children">
@@ -344,31 +343,53 @@
                         </li>
                     </ul>
                 </li> <!--AUX. SERVIÇOS GERAIS-->
-                <li class="tree-node parceiro-setor">
-                    <a href="#" class="node-link setor">
-                        <img src="imagens/logo-empreendedor.png" alt="Setor Image" class="node-image">
-                        <span class="node-label">Sala do Empreendedor</span>
-                        <p class="node-label-cargo">PARCEIRO</p>
-                    </a>
-                    <ul class="funcionarios">
-                        <li class="tree-node">
-                            <a href="#" class="node-link funcionario">
+            <li class="tree-node parceiro-setor">
+                <a href="#" class="node-link setor">
+                    <img src="imagens/logo-empreendedor.png" alt="Setor Image" class="node-image">
+                    <span class="node-label">Sala do Empreendedor</span>
+                    <p class="node-label-cargo">PARCEIRO</p>
+                </a>
+                <ul class="funcionarios">
+                    <li class="tree-node">
+                        <a href="#" class="node-link funcionario">
+                            <img src="" alt="Coordenador Image" class="node-image">
+                            <span class="node-label">Cadastro Econômico</span>
+                        </a>
+                        <ul class="coordenadores">
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/débora.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Débora</span>
+                                <p class="node-label-cargo">SERVIDORA</p>
+                            </a>
+                        </ul>
+                    </li>
+                    <li class="tree-node">
+                        <a href="#" class="node-link funcionario">
+                            <img src="" alt="Coordenador Image" class="node-image">
+                            <span class="node-label">Mei</span>
+                        </a>
+                        <ul class="coordenadores">
+                            <a href="#" class="node-link coordenador">
                                 <img src="imagens/tamara.jpg" alt="Coordenador Image" class="node-image">
                                 <span class="node-label">Tamara</span>
-                                <p class="node-label-cargo">COORDENADORA</p>
+                                <p class="node-label-cargo">SERVIDORA</p>
                             </a>
-                            <ul class="coordenadores">
-                                <a href="#" class="node-link coordenador">
-                                    <img src="imagens/elias.jpg" alt="Coordenador Image" class="node-image">
-                                    <span class="node-label">Elias</span>
-                                    <p class="node-label-cargo">SERVIDOR</p>
-                                </a>
-                                <a href="#" class="node-link coordenador">
-                                    <img src="imagens/andersson.jpg" alt="Coordenador Image" class="node-image">
-                                    <span class="node-label">Andersson</span>
-                                    <p class="node-label-cargo">SERVIDOR</p>
-                                </a>
-                                <ul class="funcionarios">
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/elias.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Elias</span>
+                                        <p class="node-label-cargo">SERVIDOR</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/andersson.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">andersson</span>
+                                        <p class="node-label-cargo">SERVIDOR</p>
+                                    </a>
+                                </li>
+                                <ul class="sub-funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
                                             <img src="imagens/tabata.jpg" alt="Employee Image" class="node-image">
@@ -412,11 +433,11 @@
                                         </a>
                                     </li>
                                 </ul>
-                        </li>
-                    </ul>
-                </li> <!--SALA DO EMPREENDEDOR-->
-            </ul>
-            </li>
+                            </ul>
+                        </ul>
+                    </li>
+                </ul>
+            </li> <!--SALA DO EMPREENDEDOR-->
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
                     <img src="imagens/sine.png" alt="Setor Image" class="node-image">
@@ -580,7 +601,6 @@
                             <span class="node-label">Vanessa</span>
                             <p class="node-label-cargo">COORDENADORA</p>
                         </a>
-
                         <ul class="coordenadores">
                             <a href="#" class="node-link coordenador">
                                 <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
@@ -636,11 +656,10 @@
                                     </a>
                                 </li>
                             </ul>
+                        </ul>
                     </li>
                 </ul>
             </li> <!--PROCON-->
-            </ul>
-            </li>
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
                     <img src="imagens/logo-receita-federal.png" alt="Setor Image" class="node-image">
@@ -675,14 +694,14 @@
                                     <span class="node-label">JHONATAN</span>
                                     <p class="node-label-cargo">ESTAGIÁRIO</p>
                                 </a>
-                            </li> 
+                            </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
                                     <img src="imagens/leonardo.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">Leonardo</span>
                                     <p class="node-label-cargo">ESTAGIÁRIO</p>
                                 </a>
-                            </li>    
+                            </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
                                     <img src="imagens/gabriela tamanini.jpg" alt="Employee Image" class="node-image">
@@ -747,7 +766,8 @@
                                 <ul class="sub-funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/leonardo bertolo.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/leonardo bertolo.jpg" alt="Employee Image"
+                                                class="node-image">
                                             <span class="node-label">Leonardo</span>
                                             <p class="node-label-cargo">ESTAGIÁRIO</p>
                                         </a>
@@ -757,7 +777,7 @@
                         </ul>
                     </li>
                 </ul>
-            </li>
+            </li><!--DEMUTRAN-->
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
                     <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -843,7 +863,7 @@
                         </ul>
                     </li>
                 </ul>
-             </li> <!--IDENTIDADE-->   
+            </li> <!--IDENTIDADE-->
         </div>
     </div>
     <script src="js/script.js"></script>
