mod:fotos setor

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <ul class="tree-root">
                         <li class="tree-node-gestao-setor">
                             <a href="#" class="node-link setor" id="gestao-link">
-                                <img src="imagens/simplifica-removebg-preview.png" alt="Setor Image" class="node-image">
+                                <img src="imagens/simplifica.png" alt="Setor Image" class="node-image">
                                 <span class="node-label">Gestão</span>
                             </a>
                             <ul class="coordenadores">
@@ -157,7 +157,7 @@
                 </li> <!--TI-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <img src="imagens/Call-Center.png" alt="Setor Image" class="node-image">
                         <span class="node-label">Call Center</span>
                     </a>
                     <ul class="funcionarios">
@@ -208,7 +208,7 @@
                 </li> <!--TRÂMITE-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <img src="imagens/planejamento.png" alt="Setor Image" class="node-image">
                         <span class="node-label">TRIBUTOS</span>
                     </a>
                     <ul class="coordenadores">
@@ -267,7 +267,7 @@
                 </li> <!--TRIBUTOS-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <img src="imagens/unidade de conciliação.png" alt="Setor Image" class="node-image">
                         <span class="node-label">Unidade de Conciliação</span>
                     </a>
                     <ul class="coordenadores">
