--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <ul class="tree-children">
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <img src="imagens/triagem.png" alt="Setor Image" class="node-image">
                         <span class="node-label">Triagem</span>
                     </a>
                     <ul class="funcionarios">
