mod:fotos setor

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 </li> <!--TRÂMITE-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="imagens/planejamento.png" alt="Setor Image" class="node-image">
+                        <img src="imagens/TRIBUTOS.png" alt="Setor Image" class="node-image">
                         <span class="node-label">TRIBUTOS</span>
                     </a>
                     <ul class="coordenadores">
@@ -329,7 +329,7 @@
                 </li> <!--UNIDADE DE CONCILIAÇÃO-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <img src="imagens/serviços.png" alt="Setor Image" class="node-image">
                         <span class="node-label">Aux. Serviços Gerais</span>
                         <p class="node-label-cargo"></p>
                     </a>
@@ -745,7 +745,7 @@
                 </li> <!--JUNTA-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <img src="imagens/detran.png" alt="Setor Image" class="node-image">
                         <span class="node-label">Demutran</span>
                         <p class="node-label-cargo">PARCEIRO</p>
                     </a>
@@ -780,7 +780,7 @@
                 </li><!--DEMUTRAN-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <img src="imagens/ID.png" alt="Setor Image" class="node-image">
                         <span class="node-label">IDENTIDADE</span>
                         <p class="node-label-cargo">PARCEIRO</p>
                     </a>
